add feature db